# hoist_temporaries

./: .travis.yml  Cargo.toml  LICENSE  README.md
hoist_temporaries/: Cargo.toml  README.md
hoist_temporaries/src/: attr_parser.rs  lib.rs
tests/: Cargo.toml
tests/tests/: lib.rs
tests/tests/failing_examples/: already_owned_in_correct_scope.rs  already_owned_in_correct_scope.stderr  already_owned_in_correect_scope.rs  already_owned_in_correect_scope.stderr  attr_on_non_let.rs  attr_on_non_let.stderr  bad_attr.rs  bad_attr.stderr  not_fn.rs  not_fn.stderr
tests/tests/working_examples/: assign_non_owned.rs  basic.rs  initial_ascribed.rs  initial_ascribed_with_value.rs  multiple_assigns.rs  multiple_variables.rs  unused.rs  unused.stderr
